# confluence-mcp

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  SPEC.md  pyproject.toml
src/confluence_mcp/: confluence.py  models.py  server.py
