[project]
name = "confluence-mcp"
version = "0.1.0"
description = "MCP server for human-like navigation of Confluence Wiki"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.10.0",
  "httpx>=0.27.0",
  "markdownify>=0.13.1",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
]

[project.scripts]
confluence-mcp = "confluence_mcp.server:main"

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.uv]
package = true
